# unigest

./: DESIGN.md  Dockerfile.server  PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
scripts/: deploy.sh  dev.sh
server/: config.py  db.py  main.py  models.py  webhook.py
server/routes/: extractors.py  hitl.py  jobs.py  worker.py
shared/: hashing.py  types.py
worker/: config.py  main.py  pipeline.py  quality.py  sandbox.py
worker/extractors/: docx.py  html.py  image.py  pdf.py  xlsx.py
worker/improvement/: codegen.py  diagnosis.py  engine.py  review.py
worker/stages/: cache.py  domain_extractor.py  generic.py  headless.py  hitl.py  llm_assisted.py
